WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16228
kJSClassDefinitionEmpty is not exported with JS_EXPORT
https://bugs.webkit.org/show_bug.cgi?id=16228
Summary
kJSClassDefinitionEmpty is not exported with JS_EXPORT
Alp Toker
Reported
2007-12-01 16:37:36 PST
When fixing
http://bugs.webkit.org/show_bug.cgi?id=15569
we neglected to export the kJSClassDefinitionEmpty global. Its actual definition is in JSClassRef.cpp kJSClassDefinitionEmpty is the only part of the API that is not defined statically and is not an entry point. This was noticed when attempting to build minidom.c out-of-tree.
Attachments
Proposed fix
(2.39 KB, patch)
2007-12-01 18:18 PST
,
Alp Toker
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-12-01 18:18:25 PST
Created
attachment 17634
[details]
Proposed fix Tested with gcc-linux-gtk+
Adam Roben (:aroben)
Comment 2
2007-12-01 21:14:09 PST
Comment on
attachment 17634
[details]
Proposed fix r=me
Alp Toker
Comment 3
2007-12-01 21:24:47 PST
Landed in
r28311
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug