JavaScriptCore/API/JSBase.h
@@ -61,12 +61,14 @@ typedef struct OpaqueJSValue* JSObjectRef;
 /* JavaScript symbol exports */
 
 #undef JS_EXPORT
-#if defined(WIN32) || defined(_WIN32)
-    #define JS_EXPORT
-#elif defined(__GNUC__)
+#if defined(__GNUC__)
     #define JS_EXPORT __attribute__((visibility("default")))
+#elif defined(WIN32) || defined(_WIN32)
+    // TODO: Export symbols with JS_EXPORT when using MSVC.
+    // See http://bugs.webkit.org/show_bug.cgi?id=16227
+    #define JS_EXPORT
 #else
-    #define JS_EXPORT extern
+    #define JS_EXPORT
 #endif
 
 #ifdef __cplusplus
